fix: fix column-gap values

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -11,7 +11,7 @@ footer {
 
 .mc-visa-icons-and-support-info {
   display: flex;
-  column-gap: 27.88%;
+  column-gap: 29.88%;
 }
 
 .mc-visa-icons-and-support-info-size {
@@ -20,7 +20,7 @@ footer {
 
 .footer-icons-container {
   display: flex;
-  column-gap: 20px;
+  column-gap: 26%;
   padding-top: 11px;
 
   img {
