--- a/scss/header.scss
+++ b/scss/header.scss
@@ -31,7 +31,7 @@
 
 .header-inscription-position {
   display: flex;
-  column-gap: 37px;
+  column-gap: 2.4%;
   height: 100%;
   padding: 2% 0 0 20.46%;
 }
