--- a/scss/main.scss
+++ b/scss/main.scss
@@ -569,7 +569,6 @@
 .icons-list {
   display: flex;
   justify-content: space-between;
-  column-gap: 30px;
   min-width: 190px;
 
   div {
